# ChemTrain

./: .gitignore  CMakeLists.txt  DESCRIPTORS.md  Makefile  README.md  compile_commands.json
benchmark/: topo_benchmark.c  topo_benchmark.cpp
doc/: COMMON.md  C_DESCRIPTORS_GUIDE.md  DESCRIPTORS.md  simple_descriptor_example.c
scripts/: test_smiles.txt  update_registry.py  variance_analyzer.c
src/: common.cpp  common.hpp  cregistry.h  csv_parser.c  csv_parser.h  csv_wrapper.hpp  csv_writer.c  csv_writer.h  main.cpp  registry.cpp  registry.hpp
src/descriptors/: bitsoperations.c  bitsoperations.cpp  bonds.cpp  bordwellscale.cpp  brotomoreau.cpp  c_descriptor_template.c  c_wrappers.cpp  graphoperations.cpp  radius.cpp  regex_utils.cpp  regexcounts.c  regexcounts.cpp  regexelectronegativity.cpp  regexfractions.cpp  spit.c  topological.c  weightfractions.cpp
tests/: test_csv_io.py
